# pipeworks_entity_state_generation

./: BASELINE_API.md  Project_TODO_List.md  README.md  RISK_ASSESSMENT.md  ROLLBACK_PLAN.md  change_random.md  merge_todo.md  pyproject.toml  pytest.ini  smoke_test.py
.github/workflows/: lint.yml  publish.yml  test.yml
docs/: README.md  conf.py  examples.rst  index.rst
docs/api/: _base.md  _base.rst  character_conditions.md  character_conditions.rst  facial_conditions.md  index.rst  occupation_axis.md  occupation_axis.rst
docs/design/: 00_goblin_laws.md  01_character_state_model.md  02_pipeworks_system_architecture.md  03_pipeworks_components.md  04_characters_first_narrow_door.md  index.rst
docs/design/specifications/: occupation_axis.md
docs/design_philosophy/: README.md  index.rst
docs/design_philosophy/conceptual_design/: Obey_the_Verb.md  condition_axis.md
docs/design_philosophy/philosophy/: 01_character_state_model.md  02_system_architecture.md  03_design_decision_characters_first.md
docs/diagrams/: README.md
docs/guides/: Migration-v1.0-to-v1.1.md  Pre-Commit Hooks Setup Guide.md
docs/specifications/: Obey_the_Verb.md  condition_axis.md  occupation_axis.md
examples/: GitHub Actions CI Setup Guide.md  README.md  advanced_usage.py  basic_usage.py  batch_generation.py  custom_axes.py  image_prompt_generation.py  integration_example.py
src/condition_axis/: __init__.py  _base.py  character_conditions.py  facial_conditions.py  occupation_axis.py
tests/: test_character_conditions_axis.py  test_examples.py  test_facial_conditions_axis.py  test_occupation_axis_axis.py
