[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeworks-conditional-axis"
version = "1.0.0"
description = "Structured, rule-based framework for generating coherent state descriptions across multiple semantic dimensions"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "GPL-3.0-only"}
authors = [
	{name = "aapark", email = "aa.parky@gmail.com"}
]
keywords = [
	"procedural-generation",
	"character-generation",
	"world-building",
	"semantic-rules",
	"weighted-probability",
	"game-development",
	"mud",
	"interactive-fiction"
]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"Intended Audience :: End Users/Desktop",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Topic :: Games/Entertainment",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
	"pytest>=8.0.0",
	"pytest-cov>=4.1.0",
	"black>=24.0.0",
	"ruff>=0.3.0",
	"mypy>=1.9.0",
	"pre-commit>=3.0.0",
]
docs = [
	"sphinx>=7.0.0",
	"sphinx-rtd-theme>=2.0.0",
	"sphinx-autodoc-typehints>=1.25.0",
	"myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/aa-parky/pipeworks_conditional_axis"
Repository = "https://github.com/aa-parky/pipeworks_conditional_axis.git"
Issues = "https://github.com/aa-parky/pipeworks_conditional_axis/issues"
Documentation = "https://github.com/aa-parky/pipeworks_conditional_axis/blob/main/README.md"

[tool.setuptools]
packages = ["condition_axis"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ["py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
	".git",
	"__pycache__",
	"build",
	"dist",
	".venv",
	".eggs",
]

[tool.ruff.lint]
select = [
	"E",      # pycodestyle errors
	"W",      # pycodestyle warnings
	"F",      # pyflakes
	"I",      # isort
	"N",      # pep8-naming
	"UP",     # pyupgrade
	"B",      # flake8-bugbear
	"C4",     # flake8-comprehensions
	"RUF",    # ruff-specific rules
]
ignore = [
	"E501",   # line too long (handled by black)
	"W505",   # doc line too long
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
	"F841",   # unused variable (common in test setup)
]

[tool.ruff.lint.isort]
known-first-party = ["condition_axis"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
show_error_codes = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
	"-v",
	"--strict-markers",
	"--tb=short",
	"--disable-warnings",
]
markers = [
	"unit: unit tests",
	"integration: integration tests",
	"slow: slow running tests",
]

[tool.coverage.run]
source = ["condition_axis"]
omit = [
	"*/tests/*",
	"*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
	"pragma: no cover",
	"def __repr__",
	"raise AssertionError",
	"raise NotImplementedError",
	"if __name__ == .__main__.:",
	"if TYPE_CHECKING:",
	"if typing.TYPE_CHECKING:",
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
